fixed overflows

--- a/css/styles.css
+++ b/css/styles.css
@@ -635,7 +635,7 @@ ul {
   width: 100%;
   height: 100%;
   opacity: 0;
-  overflow-y: scroll;
+  overflow-y: auto;
   -webkit-transition: opacity 0.4s ease;
   -moz-transition: opacity 0.4s ease;
   transition: opacity 0.4s ease;
@@ -770,7 +770,7 @@ ul {
   border: 0.5vh solid;
   height: 7vh;
   line-height: 6vh;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .btn-primary.focus, .btn-primary.active {
